--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.magic.value" class="resource-label">Power</label>
+          <label for="system.magic.value" class="resource-label">Magic</label>
           <div class="resource-content flexrow flex-center flex-between">
           <input type="text" name="system.magic.value" value="{{system.magic.value}}" data-dtype="Number"/>
           <span> / </span>
@@ -32,9 +32,9 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.attributes.level.value" class="resource-label">Level</label>
+          <label for="system.experience.value" class="resource-label">Experience</label>
           <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.attributes.level.value" value="{{system.attributes.level.value}}" data-dtype="Number"/>
+          <input type="text" name="system.experience.value" value="{{system.experience.value}}" data-dtype="Number"/>
           </div>
         </div>
 
@@ -61,27 +61,38 @@
     <div class="tab traits" data-group="primary" data-tab="traits">
       <section class="grid grid-3col">
         <aside class="sidebar">
-
+          <h3>Attributes</h3>
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns.  --}}
-          <div class="abilities flexcol">
-            {{#each system.abilities as |ability key|}}
-            <div class="ability flexrow flex-group-center">
-              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+          <div class="attributes flexcol">
+            {{#each system.attributes as |attribute key|}}
+            <div class="attribute flexrow flex-group-center">
+              <button class="attribute rollable" data-rolltype="actor" data-roll="@attributes.{{key}}.value" data-label="{{key}}"><i class="fas fa-dice-d20"></i></button>
+              <label for="system.attributes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@attributes.{{key}}.value" data-label="{{attribute.label}}" data-kind="Attribute">{{attribute.label}}</label>
+              <input type="text" name="system.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="String"/>
             </div>
             {{/each}}
           </div>
         </aside>
 
-        {{!-- For the main features list, span the right two columns --}}
-        <section class="main grid-span-2">
-          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
-          {{> "systems/earthland/templates/actor/parts/actor-features.html"}}
-        </section>
+          <div class="roles flexcol">
+            <h3>Roles</h3>
+            {{#each system.roles as |role key|}}
+            <div class="role flexrow flex-group-center">
+              <button class="role rollable" data-rolltype="actor" data-roll="@roles.{{key}}.value" data-label="{{key}}"><i class="fas fa-dice-d20"></i></button>
+              <label for="system.roles.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@roles.{{key}}.value" data-label="{{role.label}}" data-kind="Role">{{role.label}}</label>
+              <input type="text" name="system.roles.{{key}}.value" value="{{role.value}}" data-dtype="String"/>
+            </div>
+            {{/each}}
+          </div>
 
+          <div class="distinctions">
+            <h3>Distinctions</h3>
+            <div class="role flexrow flex-group-center">
+       {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
+            </div>
+          </div>
       </section>
     </div>
 
