--- a/templates/chat/roll-result.html
+++ b/templates/chat/roll-result.html
@@ -1,4 +1,4 @@
-<div class="earthland roll-result" style="position: relative;">
+<div class="dice-pool roll-result" style="position: relative;">
   <div class="mb-1">
     {{#each dicePool as |sourcePool source|}}
       <div class="source my-1 section-cpt pa-1" data-source="{{source}}">
