--- a/templates/other/dice-pool.html
+++ b/templates/other/dice-pool.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} sheet-cpt" autocomplete="off">
+<form class="{{cssClass}} dice-pool sheet-cpt" autocomplete="off">
   <div class="sheet-background"></div>
   <div class="sheet-image"></div>
   <div class="sheet-content pa-2">
