--- a/templates/partials/dice/select-options.html
+++ b/templates/partials/dice/select-options.html
@@ -1,3 +1,6 @@
+{{#if (and (gte 2 min) (lte 2 max))}}
+  <option value="2">d2</option>
+{{/if}}
 {{#if (and (gte 4 min) (lte 4 max))}}
   <option value="4">d4</option>
 {{/if}}
