--- a/templates/partials/dice/select-options.html
+++ b/templates/partials/dice/select-options.html
@@ -16,3 +16,6 @@
 {{#if (and (gte 12 min) (lte 12 max))}}
   <option value="12">d12</option>
 {{/if}}
+{{#if (and (gte 20 min) (lte 20 max))}}
+  <option value="20">d20</option>
+{{/if}}
