--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -8,7 +8,7 @@
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
+      <div class="resources grid grid-4col">
 
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
@@ -55,7 +55,7 @@
     <a class="item" data-tab="features">Features</a>
     <a class="item" data-tab="equipment">Equipment</a>
     <a class="item" data-tab="spells">Magic</a>
-    <a class="item" data-tab="effects">Relationships</a>
+    <a class="item" data-tab="relationships">Relationships</a>
     <a class="item" data-tab="effects">Effects</a>
     <a class="item" data-tab="notes">Notes</a>
   </nav>
@@ -114,10 +114,14 @@
       </section>
     </div>
 
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="notes">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    {{!-- Features --}}
+    <div class="tab features" data-group="primary" data-tab="features">
+       {{> "systems/earthland/templates/actor/parts/actor-features.html"}}
+    </div>
+
+    {{!-- Relationships --}}
+    <div class="tab features" data-group="primary" data-tab="relationships">
+       {{> "systems/earthland/templates/actor/parts/actor-relationships.html"}}
     </div>
 
     {{!-- Owned Equipment Tab --}}
@@ -133,6 +137,12 @@
     {{!-- Active Effects Tab --}}
     <div class="tab effects flexcol" data-group="primary" data-tab="effects">
       {{> "systems/earthland/templates/actor/parts/actor-effects.html"}}
+    </div>
+
+    {{!-- Biography Tab --}}
+    <div class="tab biography" data-group="primary" data-tab="notes">
+      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
+      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
   </section>
