--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -1,22 +1,131 @@
-<ol class="items-list">
-  <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
-    <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="feature"><i class="fas fa-plus"></i> Add item</a>
-    </div>
-  </li>
-  {{#each features as |item id|}}
-    <li class="item flexrow" data-item-id="{{item._id}}">
-      <div class="item-name">
-        <div class="item-image">
-          <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-        </div>
-        <h4>{{item.name}}</h4>
+<div class="resource flex-group-center">
+<h2>Species</h2>
+</div>
+
+<div class="trait-header">
+  <div class="resources grid grid-2col">
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.species" class="resource-label">Species</label>
+        <input type="text" name="system.species" value="{{system.species}}" data-dtype="string"/>
       </div>
+    </div>
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.species" class="resource-label">Subspecies</label>
+        <input type="text" name="system.subspecies" value="{{system.subspecies}}" data-dtype="string"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="trait-group">
+  <h3>Species Features</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-create" title="Create Species Feature" data-type="feature"><i class="fas fa-plus"></i> Add Species Feature</a>
       </div>
     </li>
-  {{/each}}
-</ol>
+    {{#each species_features as |feature id|}}
+      <li class="item flexrow" data-item-id="{{feature._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{feature.img}}" title="{{feature.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{feature.name}}</h4>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Species Abilities</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Ability" data-type="ability"><i class="fas fa-plus"></i> Add Species Ability</a>
+      </div>
+    </li>
+    {{#each species_abilities as |ability id|}}
+      <li class="item flexrow" data-item-id="{{ability._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{ability.img}}" title="{{ability.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{ability.name}}</h4>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="resource flex-group-center">
+<h2>Classes and Subclasses</h2>
+</div>
+<div class="trait-group">
+
+</div>
+
+<div class="trait-group">
+  <h3>Class Features</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Class Feature" data-type="feature"><i class="fas fa-plus"></i> Add Class Feature</a>
+      </div>
+    </li>
+    {{#each class_features as |feature id|}}
+      <li class="item flexrow" data-item-id="{{feature._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{feature.img}}" title="{{feature.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{feature.name}}</h4>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Class Abilities</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Ability" data-type="ability"><i class="fas fa-plus"></i> Add Class Ability</a>
+      </div>
+    </li>
+    {{#each class_abilities as |ability id|}}
+      <li class="item flexrow" data-item-id="{{ability._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{ability.img}}" title="{{ability.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{ability.name}}</h4>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
