checkpoint commit, got most of the item sheets working

--- a/templates/item/item-ability-sheet.html
+++ b/templates/item/item-ability-sheet.html
@@ -44,17 +44,17 @@
 
       <div class="resource">
         <label class="resource-label">Is this a Class Ability?</label>
-        <input class="input-checkbox-cpt" name="system.isClassAbility" type="checkbox" {{checked system.isClassAbility}}>
+        <input class="input-checkbox-cpt" name="system.is_class_ability" type="checkbox" {{checked system.is_class_ability}}>
       </div>
 
       <div class="resource">
         <label class="resource-label">Is this a Race Ability?</label>
-        <input class="input-checkbox-cpt" name="system.isRaceAbility" type="checkbox" {{checked system.isRaceAbility}}>
+        <input class="input-checkbox-cpt" name="system.is_race_ability" type="checkbox" {{checked system.is_race_ability}}>
       </div>
 
       <div class="resource">
         <label class="resource-label">Is this a Monster Ability?</label>
-        <input class="input-checkbox-cpt" name="system.isMonsterAbility" type="checkbox" {{checked system.isMonsterAbility}}>
+        <input class="input-checkbox-cpt" name="system.is_monster_ability" type="checkbox" {{checked system.is_monster_ability}}>
       </div>
     </div>
 
