--- a/templates/item/item-milestone-sheet.html
+++ b/templates/item/item-milestone-sheet.html
@@ -3,16 +3,6 @@
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
-      <div class="grid grid-2col">
-        <div class="resource">
-          <label class="resource-label">Quantity</label>
-          <input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number"/>
-        </div>
-        <div class="resource">
-          <label class="resource-label">Weight</label>
-          <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number"/>
-        </div>
-      </div>
     </div>
   </header>
 
@@ -25,19 +15,49 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
+    {{!-- Attributes Tab --}}
+    <div class="tab attributes" data-group="primary" data-tab="attributes">
+      <div class="resource">
+        <label class="resource-label">Kind</label>
+        <input type="text" name="system.kind" value="{{system.kind}}" data-dtype="String"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Level</label>
+        <input type="text" name="system.level" value="{{system.level}}" data-dtype="String"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">XP</label>
+        <input type="text" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Can this Milestone be Completed Multiple Times?</label>
+        <input class="input-checkbox-cpt" name="system.is_repeatable" type="checkbox" {{checked system.is_repeatable}}>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Is it Shared?</label>
+        <input class="input-checkbox-cpt" name="system.is_shared" type="checkbox" {{checked system.is_shared}}>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Is it Hidden from the Player?</label>
+        <input class="input-checkbox-cpt" name="system.is_hidden" type="checkbox" {{checked system.is_hidden}}>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Is it Complete?</label>
+        <input class="input-checkbox-cpt" name="system.is_complete" type="checkbox" {{checked system.is_complete}}>
+      </div>
+    </div>
+
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
-    {{!-- Attributes Tab --}}
-    <div class="tab attributes" data-group="primary" data-tab="attributes">
-      {{!-- As you add new fields, add them in here! --}}
-      <div class="resource">
-        <label class="resource-label">Roll Formula</label>
-        <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
-      </div>
-    </div>
   </section>
+
 </form>
