--- a/templates/item/item-relationship-sheet.html
+++ b/templates/item/item-relationship-sheet.html
@@ -3,16 +3,6 @@
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
-      <div class="grid grid-2col">
-        <div class="resource">
-          <label class="resource-label">Quantity</label>
-          <input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number"/>
-        </div>
-        <div class="resource">
-          <label class="resource-label">Weight</label>
-          <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number"/>
-        </div>
-      </div>
     </div>
   </header>
 
@@ -25,19 +15,34 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
-    {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
-      {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
-
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
-      {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        <label class="resource-label">Roll Formula</label>
-        <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
+        <label class="resource-label">Kind</label>
+        <input type="text" name="system.kind" value="{{system.kind}}" data-dtype="String"/>
       </div>
+
+      <div class="resource">
+        <label class="resource-label">Character</label>
+        <input type="text" name="system.character" value="{{system.character}}" data-dtype="String"/>
+      </div>
+
+      <div class="resource">
+        <label class="resource-label">Is the source an Organization?</label>
+        <input class="input-checkbox-cpt" name="system.is_organization" type="checkbox" {{checked system.is_organization}}>
+      </div>
+
+      <div>
+        {{> "systems/earthland/templates/item/parts/magic.html"}}
+      </div>
+
+      <div>
+        {{> "systems/earthland/templates/item/parts/rollable.html"}}
+      </div>
+
     </div>
+
+    {{!-- Description Tab --}}
+    {{> "systems/earthland/templates/item/parts/base.html"}}
   </section>
 </form>
