--- a/templates/item/item-feature-sheet.html
+++ b/templates/item/item-feature-sheet.html
@@ -39,17 +39,17 @@
 
       <div class="resource">
         <label class="resource-label">Is this a Class Feature?</label>
-        <input class="input-checkbox-cpt" name="system.isClassFeature" type="checkbox" {{checked system.isClassFeature}}>
+        <input class="input-checkbox-cpt" name="system.is_class_feature" type="checkbox" {{checked system.is_class_feature}}>
       </div>
 
       <div class="resource">
         <label class="resource-label">Is this a Race Feature?</label>
-        <input class="input-checkbox-cpt" name="system.isRaceFeature" type="checkbox" {{checked system.isRaceFeature}}>
+        <input class="input-checkbox-cpt" name="system.is_race_feature" type="checkbox" {{checked system.is_race_feature}}>
       </div>
 
       <div class="resource">
         <label class="resource-label">Is this a Monster Feature?</label>
-        <input class="input-checkbox-cpt" name="system.isMonsterFeature" type="checkbox" {{checked system.isMonsterFeature}}>
+        <input class="input-checkbox-cpt" name="system.is_monster_feature" type="checkbox" {{checked system.is_monster_feature}}>
       </div>
     </div>
 
