--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -53,9 +53,10 @@
     {{!-- Default tab is specified in actor-sheet.mjs --}}
     <a class="item" data-tab="traits">Traits</a>
     <a class="item" data-tab="features">Features</a>
-    <a class="item" data-tab="equipment">Equipment</a>
+    <a class="item" data-tab="equipment">Gear</a>
     <a class="item" data-tab="spells">Magic</a>
     <a class="item" data-tab="relationships">Relationships</a>
+    <a class="item" data-tab="milestones">Milestones</a>
     <a class="item" data-tab="effects">Effects</a>
     <a class="item" data-tab="notes">Notes</a>
   </nav>
@@ -132,6 +133,11 @@
     {{!-- Owned Spells Tab --}}
     <div class="tab spells" data-group="primary" data-tab="spells">
       {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
+    </div>
+
+    {{!-- Owned Milestones Tab --}}
+    <div class="tab milestones" data-group="primary" data-tab="milestones">
+      {{> "systems/earthland/templates/actor/parts/actor-milestones.html"}}
     </div>
 
     {{!-- Active Effects Tab --}}
