--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -1,5 +1,5 @@
 <div class="resource flex-group-center">
-<h2>Species</h2>
+  <h2>Species Features</h2>
 </div>
 
 <div class="trait-header">
@@ -19,13 +19,14 @@
   </div>
 </div>
 
+
 <div class="trait-group">
   <h3>Species Features</h3>
   <ol class="items-list">
     <li class="item flexrow items-header">
       <div class="item-name">Name</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Species Feature" data-type="feature"><i class="fas fa-plus"></i> Add Species Feature</a>
+        <a class="item-control item-create" title="Create Species Feature" data-type="feature-species"><i class="fas fa-plus"></i> Add Species Feature</a>
       </div>
     </li>
     {{#each species_features as |feature id|}}
@@ -51,7 +52,7 @@
     <li class="item flexrow items-header">
       <div class="item-name">Name</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Ability" data-type="ability"><i class="fas fa-plus"></i> Add Species Ability</a>
+        <a class="item-control item-create" title="Create Ability" data-type="ability-species"><i class="fas fa-plus"></i> Add Species Ability</a>
       </div>
     </li>
     {{#each species_abilities as |ability id|}}
@@ -72,11 +73,39 @@
 </div>
 
 <div class="resource flex-group-center">
-<h2>Classes and Subclasses</h2>
+  <h2>Subclasses</h2>
 </div>
-<div class="trait-group">
 
+<div class="trait-group">
+  <h3>Subclasses</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Subclass" data-type="subclass"><i class="fas fa-plus"></i> Add Subclass</a>
+      </div>
+    </li>
+    {{#each subclasses as |subclass id|}}
+      <li class="item flexrow" data-item-id="{{subclass._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{subclass.img}}" title="{{subclass.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{subclass.name}}</h4>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
 </div>
+
+<div class="resource flex-group-center">
+  <h2>Class Features</h2>
+</div>
+
 
 <div class="trait-group">
   <h3>Class Features</h3>
@@ -84,7 +113,7 @@
     <li class="item flexrow items-header">
       <div class="item-name">Name</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Class Feature" data-type="feature"><i class="fas fa-plus"></i> Add Class Feature</a>
+        <a class="item-control item-create" title="Create Class Feature" data-type="feature-class"><i class="fas fa-plus"></i> Add Class Feature</a>
       </div>
     </li>
     {{#each class_features as |feature id|}}
@@ -110,7 +139,7 @@
     <li class="item flexrow items-header">
       <div class="item-name">Name</div>
       <div class="item-controls">
-        <a class="item-control item-create" title="Create Ability" data-type="ability"><i class="fas fa-plus"></i> Add Class Ability</a>
+        <a class="item-control item-create" title="Create Ability" data-type="ability-class"><i class="fas fa-plus"></i> Add Class Ability</a>
       </div>
     </li>
     {{#each class_abilities as |ability id|}}
