--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -109,7 +109,21 @@
           <div class="distinctions">
             <h3>Distinctions</h3>
             <div class="distinction flexrow flex-group-center">
-       {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
+              {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
+            </div>
+            <br/>
+            <hr/>
+            <br/>
+            <h3>Specialties</h3>
+            <div class="specialty flexrow flex-group-center">
+              {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
+            </div>
+            <br/>
+            <hr/>
+            <br/>
+            <h3>Complications</h3>
+            <div class="complication flexrow flex-group-center">
+              {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
             </div>
           </div>
       </section>
