--- a/templates/actor/parts/actor-milestones.html
+++ b/templates/actor/parts/actor-milestones.html
@@ -1,24 +1,37 @@
-<ol class="items-list">
-  <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
-    <div class="item-formula">Roll Formula</div>
-    <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add item</a>
-    </div>
-  </li>
-  {{#each gear as |item id|}}
-    <li class="item flexrow" data-item-id="{{item._id}}">
-      <div class="item-name">
-        <div class="item-image">
-          <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-        </div>
-        <h4>{{item.name}}</h4>
-      </div>
-      <div class="item-formula item-prop">{{item.system.formula}}</div>
+<div class="trait-group">
+  <h3>Milestones</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name flex-group-center"><div class="flexrow flex-center flex-between">XP Value</div></div>
+      <div class="item-name">Completed?</div>
+      <div class="item-name">Kind</div>
+      <div class="item-name">Action</div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-create" title="Create Milestone" data-type="milestone"><i class="fas fa-plus"></i> Add Milestone</a>
       </div>
     </li>
-  {{/each}}
-</ol>
+    {{#each milestones as |milestone id|}}
+      <li class="item flexrow" data-item-id="{{milestone._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{milestone.img}}" title="{{milestone.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{milestone.name}}</h4>
+        </div>
+        <div class="item-name flex-group-center"><div class="flexrow flex-center flex-between">{{milestone.system.xp}}</div></div>
+        <div class="item-name">{{#if milestone.system.is_complete}}COMPLETED{{else}}incomplete{{/if}}</div>
+        <div class="item-name">{{milestone.system.kind}}</div>
+        <div class="item-name">
+          {{#if milestone.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{milestone.system.dice}}" data-label="{{milestone.name}}" data-kind="milestone"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
