--- a/templates/actor/parts/actor-relationships.html
+++ b/templates/actor/parts/actor-relationships.html
@@ -1,22 +1,31 @@
-<ol class="items-list">
-  <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
-    <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="feature"><i class="fas fa-plus"></i> Add item</a>
-    </div>
-  </li>
-  {{#each features as |item id|}}
-    <li class="item flexrow" data-item-id="{{item._id}}">
-      <div class="item-name">
-        <div class="item-image">
-          <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-        </div>
-        <h4>{{item.name}}</h4>
-      </div>
+<div class="trait-group">
+  <h3>Relationships</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-create" title="Create Relationship" data-type="relationship"><i class="fas fa-plus"></i> Add Relationship</a>
       </div>
     </li>
-  {{/each}}
-</ol>
+    {{#each relationships as |relationship id|}}
+      <li class="item flexrow" data-item-id="{{relationship._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{relationship.img}}" title="{{relationship.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{relationship.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if relationship.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{relationship.system.dice}}" data-label="{{relationship.name}}" data-kind="relationship"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
