add size and moved experience out of base

--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="trait-header">
-  <div class="resources grid grid-2col">
+  <div class="resources grid grid-3col">
     <div class="resource flex-group-center">
       <div class="resource-content flexrow flex-center flex-between">
         <label for="system.species" class="resource-label">Species</label>
@@ -14,6 +14,12 @@
       <div class="resource-content flexrow flex-center flex-between">
         <label for="system.species" class="resource-label">Subspecies</label>
         <input type="text" name="system.subspecies" value="{{system.subspecies}}" data-dtype="string"/>
+      </div>
+    </div>
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.size" class="resource-label">Size</label>
+        <input type="text" name="system.size" value="{{system.size}}" data-dtype="string"/>
       </div>
     </div>
   </div>
