--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -8,68 +8,51 @@
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
-
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.health.value" class="resource-label">Health</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.health.value" value="{{system.health.value}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" name="system.health.max" value="{{system.health.max}}" data-dtype="Number"/>
-          </div>
+      <div class="resources">
+        <div class="personality flexrow flex-group-center">
+          <label for="system.kind" class="resource-label">Type</label>
+          <select class='tiny-input' name="system.kind" value="{{system.kind}}" data-dtype="String">
+            {{#each npc_kind_options }}
+            <option value="{{value}}" {{#selected}} selected="selected"{{/selected}}>{{name}}</option>
+            {{/each}}
+          </select>
         </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.power.value" class="resource-label">Power</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.power.value" value="{{system.power.value}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
-          </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.cr" class="resource-label">CR / XP</label>
-          <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.cr" value="{{system.cr}}" data-dtype="Number"/>
-            <span> / </span>
-            <input type="text" disabled="true" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
-          </div>
-        </div>
-
       </div>
+
+      {{#if is_mob}}
+        {{> "systems/earthland/templates/actor/parts/actor-header-mob.html"}}
+      {{/if}}
+
+      {{#if is_minion}}
+        {{> "systems/earthland/templates/actor/parts/actor-header-minion.html"}}
+      {{/if}}
+
+      {{#if is_elite}}
+        {{> "systems/earthland/templates/actor/parts/actor-header-elite.html"}}
+      {{/if}}
+
+      {{#if is_boss}}
+        {{> "systems/earthland/templates/actor/parts/actor-header-boss.html"}}
+      {{/if}}
+
     </div>
   </header>
-
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    {{!-- Default tab is specified in actor-sheet.mjs --}}
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="effects">Effects</a>
-  </nav>
-
-  {{!-- Sheet Body --}}
   <section class="sheet-body">
+      {{#if is_mob}}
+        {{> "systems/earthland/templates/actor/parts/actor-body-mob.html"}}
+      {{/if}}
 
-    {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
+      {{#if is_minion}}
+        {{> "systems/earthland/templates/actor/parts/actor-body-minion.html"}}
+      {{/if}}
 
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/earthland/templates/actor/parts/actor-items.html"}}
-    </div>
+      {{#if is_elite}}
+        {{> "systems/earthland/templates/actor/parts/actor-body-elite.html"}}
+      {{/if}}
 
-    {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/earthland/templates/actor/parts/actor-effects.html"}}
-    </div>
+      {{#if is_boss}}
+        {{> "systems/earthland/templates/actor/parts/actor-body-boss.html"}}
+      {{/if}}
 
   </section>
 </form>
