fixed css and added more things to base NPC, like abilities and gear

--- a/templates/actor/parts/actor-body-mob.html
+++ b/templates/actor/parts/actor-body-mob.html
@@ -1,2 +1,23 @@
-<h2>Mob of Humanoids</h2>
-<p>Resources for a Mob of Humanoids go here</p>
+{{!-- Sheet Body --}}
+<section class="sheet-body">
+  <div class="distinctions">
+    <h3>Distinctions</h3>
+    <div class="distinction flexrow flex-group-center">
+      {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
+    </div>
+    <br/>
+    <hr/>
+    <br/>
+    <h3>Specialties</h3>
+    <div class="specialty flexrow flex-group-center">
+      {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
+    </div>
+    <br/>
+    <hr/>
+    <br/>
+    <h3>Complications</h3>
+    <div class="complication flexrow flex-group-center">
+      {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
+    </div>
+  </div>
+</section>
