--- a/templates/actor/parts/actor-header-minion.html
+++ b/templates/actor/parts/actor-header-minion.html
@@ -1,2 +1,12 @@
 <h2>Humanoid Minion</h2>
-<p>Resources for a Humanoid Minion go here</p>
+<div class="resource flex-group-left">
+  <label for="system.health.value" class="resource-label">Health Dice</label>
+  <div class="flex-col pr-0 flex-s-1">
+                        {{> "systems/earthland/templates/partials/dice/select.html"
+                          dice=system.health_die.value
+                          edit=true
+                          selectName='system.health_die'
+                        }}
+  </div>
+  <button class="attribute rollable" data-rolltype="actor" data-roll="{{formulaFromObject system.health_die.value}}" data-label="Physique" data-kind="Body"><i class="fas fa-dice-d20"></i></button>
+</div>
