--- a/templates/actor/actor-monster-sheet.html
+++ b/templates/actor/actor-monster-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
+<form class="{{cssClass}} {{actor.type}} earthland-character flexcol" autocomplete="off">
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
