--- a/templates/actor/parts/actor-header-mob.html
+++ b/templates/actor/parts/actor-header-mob.html
@@ -1,2 +1,12 @@
 <h2>Mob of Humanoids</h2>
-<p>Resources for humanoid mob goes here</p>
+<div class="resource flex-group-left">
+  <label for="system.health.value" class="resource-label">Health Dice</label>
+  <div class="flex-col pr-0 flex-s-1">
+                        {{> "systems/earthland/templates/partials/dice/select.html"
+                          dice=system.health_die.value
+                          edit=true
+                          selectName='system.health_die'
+                        }}
+  </div>
+  <button class="attribute rollable" data-rolltype="actor" data-roll="system.health_die.value" data-label="{{key}}" data-kind="Vitality"><i class="fas fa-dice-d20"></i></button>
+</div>
