--- a/templates/actor/parts/actor-distinctions.html
+++ b/templates/actor/parts/actor-distinctions.html
@@ -9,10 +9,10 @@
   {{#each distinctions as |distinction id|}}
     <li class="item flexrow" data-item-id="{{distinction._id}}">
       <div class="item-name">
-        <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{distinction.system.dice}}" data-label="{{distinction.name}}" data-kind="Distinction"><i class="fas fa-dice-d8"></i></button>
+        <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{distinction.system.dice}}" data-label="{{distinction.name}}" data-kind="Distinction"><i class="fas fa-dice-d8"></i></button>
        <h4>{{distinction.name}}</h4>
       </div>
-      <div class="item-hinder item-prop"><button title="Roll as Hindrance" class="role rollable" data-rolltype="actor" data-roll="{{distinction.system.hinder_die}}" data-label="{{distinction.name}}" data-kind="Hindrance"><i class="fas fa-dice-d4"></i></button></div>
+      <div class="item-hinder item-prop"><button title="Roll as Hindrance" class="role rollable small-button" data-rolltype="actor" data-roll="{{distinction.system.hinder_die}}" data-label="{{distinction.name}}" data-kind="Hindrance"><i class="fas fa-dice-d4"></i></button></div>
       <div class="item-controls">
         <a class="item-control item-edit" title="Edit Distinction"><i class="fas fa-edit"></i></a>
         <a class="item-control item-delete" title="Delete Distinction"><i class="fas fa-trash"></i></a>
