--- a/templates/actor/parts/actor-equipment.html
+++ b/templates/actor/parts/actor-equipment.html
@@ -56,7 +56,7 @@
         </div>
         <div class="item-name">
           {{#if weapon.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{weapon.system.dice}}" data-label="{{weapon.name}}" data-kind="weapon"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{weapon.system.dice}}" data-label="{{weapon.name}}" data-kind="weapon"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -88,7 +88,7 @@
         </div>
         <div class="item-name">
           {{#if armor.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{armor.system.dice}}" data-label="{{armor.name}}" data-kind="armor"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{armor.system.dice}}" data-label="{{armor.name}}" data-kind="armor"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -120,7 +120,7 @@
         </div>
         <div class="item-name">
           {{#if potion.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{potion.system.dice}}" data-label="{{potion.name}}" data-kind="potion"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{potion.system.dice}}" data-label="{{potion.name}}" data-kind="potion"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -152,7 +152,7 @@
         </div>
         <div class="item-name">
           {{#if lacrima.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{lacrima.system.dice}}" data-label="{{lacrima.name}}" data-kind="lacrima"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{lacrima.system.dice}}" data-label="{{lacrima.name}}" data-kind="lacrima"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -184,7 +184,7 @@
         </div>
         <div class="item-name">
           {{#if gear.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{gear.system.dice}}" data-label="{{gear.name}}" data-kind="equipment"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{gear.system.dice}}" data-label="{{gear.name}}" data-kind="equipment"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -216,7 +216,7 @@
         </div>
         <div class="item-name">
           {{#if trinket.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{trinket.system.dice}}" data-label="{{trinket.name}}" data-kind="trinket"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{trinket.system.dice}}" data-label="{{trinket.name}}" data-kind="trinket"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -248,7 +248,7 @@
         </div>
         <div class="item-name">
           {{#if recipe.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{recipe.system.dice}}" data-label="{{recipe.name}}" data-kind="recipe"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{recipe.system.dice}}" data-label="{{recipe.name}}" data-kind="recipe"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -280,7 +280,7 @@
         </div>
         <div class="item-name">
           {{#if resource.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{resource.system.dice}}" data-label="{{resource.name}}" data-kind="resource"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{resource.system.dice}}" data-label="{{resource.name}}" data-kind="resource"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
@@ -312,7 +312,7 @@
         </div>
         <div class="item-name">
           {{#if treasure.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{treasure.system.dice}}" data-label="{{treasure.name}}" data-kind="treasure"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{treasure.system.dice}}" data-label="{{treasure.name}}" data-kind="treasure"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
