--- a/templates/actor/parts/actor-body-minion.html
+++ b/templates/actor/parts/actor-body-minion.html
@@ -1,5 +1,5 @@
 {{!-- Sheet Body --}}
-<section class="grid grid-2col">
+<section class="">
 
   <div class="roles flexcol">
     <section class="sheet-body">
@@ -46,7 +46,7 @@
           </div>
           <div class="item-name">
             {{#if ability.system.dice}}
-              <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{ability.system.dice}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
+              <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{ability.system.dice}}" data-label="{{ability.name}}" data-kind="ability"><i class="fas fa-dice-d20"></i></button>
             {{/if}}
           </div>
           <div class="item-controls">
@@ -56,17 +56,10 @@
         </li>
       {{/each}}
     </ol>
-  </div>
-
-  <br/>
-  <hr/>
-  <br/>
-
-  {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
-
-</section>
-
-  <div class="trait-group">
+    <br/>
+    <hr/>
+    <br/>
+    {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
     <h3>Gear</h3>
     <ol class="items-list">
       <li class="item flexrow items-header">
@@ -86,7 +79,7 @@
           </div>
           <div class="item-name">
             {{#if item.system.dice}}
-              <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{item.system.dice}}" data-label="{{item.name}}" data-kind="item"><i class="fas fa-dice-d20"></i></button>
+              <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{item.system.dice}}" data-label="{{item.name}}" data-kind="item"><i class="fas fa-dice-d20"></i></button>
             {{/if}}
           </div>
           <div class="item-controls">
@@ -97,3 +90,5 @@
       {{/each}}
     </ol>
   </div>
+</section>
+
