--- a/templates/actor/parts/actor-complications.html
+++ b/templates/actor/parts/actor-complications.html
@@ -8,7 +8,7 @@
   {{#each complications as |complication id|}}
     <li class="item flexrow" data-item-id="{{complication._id}}">
       <div class="item-name">
-        <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{complication.system.dice}}" data-label="{{complication.name}}" data-kind="Complication"><i class="fas fa-dice-d8"></i></button>
+        <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{complication.system.dice}}" data-label="{{complication.name}}" data-kind="Complication"><i class="fas fa-dice-d8"></i></button>
        <h4>{{complication.name}}</h4>
       </div>
       <div class="item-controls">
