--- a/templates/actor/parts/actor-header-minion.html
+++ b/templates/actor/parts/actor-header-minion.html
@@ -1,6 +1,7 @@
 <h2>Humanoid Minion</h2>
 <div class="resource flex-group-left">
   <label for="system.health.value" class="resource-label">Health Dice</label>
+  <button class="attribute rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject system.health_die.value}}" data-label="Physique" data-kind="Body"><i class="fas fa-dice-d20"></i></button>
   <div class="flex-col pr-0 flex-s-1">
                         {{> "systems/earthland/templates/partials/dice/select.html"
                           dice=system.health_die.value
@@ -8,5 +9,4 @@
                           selectName='system.health_die'
                         }}
   </div>
-  <button class="attribute rollable" data-rolltype="actor" data-roll="{{formulaFromObject system.health_die.value}}" data-label="Physique" data-kind="Body"><i class="fas fa-dice-d20"></i></button>
 </div>
