--- a/templates/actor/parts/actor-header-mob.html
+++ b/templates/actor/parts/actor-header-mob.html
@@ -8,5 +8,5 @@
                           selectName='system.health_die'
                         }}
   </div>
-  <button class="attribute rollable" data-rolltype="actor" data-roll="system.health_die.value" data-label="{{key}}" data-kind="Vitality"><i class="fas fa-dice-d20"></i></button>
+  <button class="attribute rollable small-button" data-rolltype="actor" data-roll="system.health_die.value" data-label="{{key}}" data-kind="Vitality"><i class="fas fa-dice-d20"></i></button>
 </div>
