--- a/templates/actor/parts/actor-relationships.html
+++ b/templates/actor/parts/actor-relationships.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item-name">
           {{#if relationship.system.dice}}
-            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{relationship.system.dice}}" data-label="{{relationship.name}}" data-kind="relationship"><i class="fas fa-dice-d20"></i></button>
+            <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{relationship.system.dice}}" data-label="{{relationship.name}}" data-kind="relationship"><i class="fas fa-dice-d20"></i></button>
           {{/if}}
         </div>
         <div class="item-controls">
