mostly UI fixes, but also changed classes to combat roles, going to add classes separately

--- a/templates/actor/parts/actor-body-minion.html
+++ b/templates/actor/parts/actor-body-minion.html
@@ -27,6 +27,9 @@
   </div>
 
   <div class="abilities flexcol">
+    <br/>
+    <hr/>
+    <br/>
     <h3>Abilities</h3>
     <ol class="items-list">
       <li class="item flexrow items-header">
@@ -59,7 +62,12 @@
     <br/>
     <hr/>
     <br/>
+    <h3>Spells</h3>
     {{> "systems/earthland/templates/actor/parts/actor-spells.html"}}
+    <br/>
+    <hr/>
+    <br/>
+
     <h3>Gear</h3>
     <ol class="items-list">
       <li class="item flexrow items-header">
