--- a/templates/actor/parts/actor-distinctions.html
+++ b/templates/actor/parts/actor-distinctions.html
@@ -1,16 +1,19 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
+    <div class="item-button"></div>
     <div class="item-name">Name</div>
     <div class="item-hinder">Hindrance</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create a Distinction" data-type="distinction"><i class="fas fa-plus"></i> Add a Distinction</a>
+      <a class="item-control item-create" title="Create a Distinction" data-type="distinction"><i class="fas fa-plus"></i> </a>
     </div>
   </li>
   {{#each distinctions as |distinction id|}}
     <li class="item flexrow" data-item-id="{{distinction._id}}">
-      <div class="item-name">
+      <div class="item-button">
         <button title="Roll Normally" class="role rollable small-button" data-rolltype="actor" data-roll="{{distinction.system.dice}}" data-label="{{distinction.name}}" data-kind="Distinction"><i class="fas fa-dice-d8"></i></button>
-       <h4>{{distinction.name}}</h4>
+      </div>
+      <div class="item-name">
+        <label class="resource-label rollable flexlarge align-left" data-rolltype="actor" data-roll="{{distinction.system.dice}}" data-label="{{distinction.name}}" data-kind="Distinction">{{distinction.name}}</label>
       </div>
       <div class="item-hinder item-prop"><button title="Roll as Hindrance" class="role rollable small-button" data-rolltype="actor" data-roll="{{distinction.system.hinder_die}}" data-label="{{distinction.name}}" data-kind="Hindrance"><i class="fas fa-dice-d4"></i></button></div>
       <div class="item-controls">
