--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -67,65 +67,87 @@
     {{!-- Owned Traits Tab --}}
     <div class="tab traits" data-group="primary" data-tab="traits">
       <section class="grid grid-3col">
-        <aside class="sidebar">
-          <h3>Attributes</h3>
+
+        <div class="attributes flexcol">
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns.  --}}
-          <div class="attributes flexcol">
+          <div class="attributes">
+            <h3>Attributes</h3>
             {{#each system.attributes as |attribute key|}}
-            <div class="attribute flexrow flex-group-center">
-              <button class="attribute rollable small-button" data-rolltype="actor" data-roll="@attributes.{{key}}.value" data-label="{{key}}" data-kind="Attribute"><i class="fas fa-dice-d20"></i></button>
-              <label for="system.attributes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@attributes.{{key}}.value" data-label="{{attribute.label}}" data-kind="Attribute">{{attribute.label}}</label>
-              <input type="text" name="system.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="String"/>
-            </div>
+              <div class="attribute flexrow flex-group-center"><!--   -->
+                <button class="attribute rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject attribute.value}}" data-label="{{key}}" data-kind="Attribute"><i class="fas fa-dice-d20"></i></button>
+                <label for="system.attributes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="{{formulaFromObject attribute.value}}" data-label="{{attribute.label}}" data-kind="Attribute">{{attribute.label}}</label>
+                <div class="flex-col pr-0 flex-s-1">
+                  {{> "systems/earthland/templates/partials/dice/select.html"
+                    dice=attribute.value
+                    edit=true
+                    selectName=(concat 'system.attributes.' key)
+                  }}
+                </div>
+              </div>
             {{/each}}
           </div>
-        </aside>
+        </div>
 
-          <div class="roles flexcol">
+        <div class="roles flexcol">
+          <div class="roles">
             <h3>Roles</h3>
             {{#each system.roles as |role key|}}
-            <div class="role flexrow flex-group-center">
-              <button class="role rollable small-button" data-rolltype="actor" data-roll="@roles.{{key}}.value" data-label="{{key}}" data-kind="Role"><i class="fas fa-dice-d20"></i></button>
-              <label for="system.roles.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@roles.{{key}}.value" data-label="{{role.label}}" data-kind="Role">{{role.label}}</label>
-              <input type="text" name="system.roles.{{key}}.value" value="{{role.value}}" data-dtype="String"/>
-            </div>
+              <div class="role flexrow flex-group-center">
+                <button class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject role.value}}" data-label="{{key}}" data-kind="Role"><i class="fas fa-dice-d20"></i></button>
+                <label for="system.roles.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="{{formulaFromObject role.value}}" data-label="{{role.label}}" data-kind="Role">{{role.label}}</label>
+                <div class="flex-col pr-0 flex-s-1">
+                   {{> "systems/earthland/templates/partials/dice/select.html"
+                     dice=role.value
+                     edit=true
+                     selectName=(concat 'system.roles.' key)
+                   }}
+                </div>
+              </div>
             {{/each}}
-            <br/>
-            <hr/>
-            <br/>
-            <h3>Classes</h3>
-            {{#each system.classes as |class key|}}
-            <div class="class flexrow flex-group-center">
-              <button class="class rollable small-button" data-rolltype="actor" data-roll="@classes.{{key}}.value" data-label="{{key}}" data-kind="Class"><i class="fas fa-dice-d20"></i></button>
-              <label for="system.classes.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="@classes.{{key}}.value" data-label="{{class.label}}" data-kind="Class">{{class.label}}</label>
-              <input type="text" name="system.classes.{{key}}.value" value="{{class.value}}" data-dtype="String"/>
-            </div>
-            {{/each}}
-
           </div>
+          <br/>
+          <hr/>
+          <br/>
+          <div class="combat-roles">
+            <h3>Combat Roles</h3>
+            {{#each system.packages as |package key|}}
+              <div class="package flexrow flex-group-center">
+                <button class="package rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject package.value}}" data-label="{{key}}" data-kind="Role"><i class="fas fa-dice-d20"></i></button>
+                <label for="system.packages.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="{{formulaFromObject package.value}}" data-label="{{package.label}}" data-kind="Role">{{package.label}}</label>
+                <div class="flex-col pr-0 flex-s-1">
+                  {{> "systems/earthland/templates/partials/dice/select.html"
+                  dice=package.value
+                  edit=true
+                  selectName=(concat 'system.packages.' key)
+                  }}
+                </div>
+              </div>
+            {{/each}}
+          </div>
+        </div>
 
-          <div class="distinctions">
+        <div class="distinctions flexcol">
+          <div class="distinction"><!-- flexrow flex-group-center -->
             <h3>Distinctions</h3>
-            <div class="distinction flexrow flex-group-center">
-              {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
-            </div>
-            <br/>
-            <hr/>
-            <br/>
-            <h3>Specialties</h3>
-            <div class="specialty flexrow flex-group-center">
-              {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
-            </div>
-            <br/>
-            <hr/>
-            <br/>
-            <h3>Complications</h3>
-            <div class="complication flexrow flex-group-center">
-              {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
-            </div>
+            {{> "systems/earthland/templates/actor/parts/actor-distinctions.html"}}
           </div>
+          <br/>
+          <hr/>
+          <br/>
+          <div class="specialty">
+            <h3>Specialties</h3>
+            {{> "systems/earthland/templates/actor/parts/actor-specialties.html"}}
+          </div>
+          <br/>
+          <hr/>
+          <br/>
+          <div class="complication">
+            <h3>Complications</h3>
+            {{> "systems/earthland/templates/actor/parts/actor-complications.html"}}
+          </div>
+        </div>
       </section>
     </div>
 
